fix overflow issue, applay conventions

--- a/troposphere/static/css/app/applications.scss
+++ b/troposphere/static/css/app/applications.scss
@@ -247,14 +247,6 @@
   text-align: left;
 }
 
-.image-tag-list {
-  table {
-    .t-body-2 {
-      min-height: 30px;
-    }
-  }
-}
-
 .tag-title {
   margin-bottom: 10px;
 }
